--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -134,6 +134,40 @@ resources:
     access_token: {{access-token}}
     drafts: true
 
+- name: statsd-injector-version
+  type: semver
+  source:
+    initial_version: 1.0.0
+    bucket: statsd-injector-release-blobs
+    key: version
+    access_key_id: {{s3-access-key-id}}
+    secret_access_key: {{s3-secret-access-key}}
+
+- name: statsd-injector-release
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/statsd-injector-release
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
+- name: statsd-injector-final-release
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/statsd-injector-release
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: statsd-injector-release-github-release-drafts
+  type: github-release
+  source:
+    user: cloudfoundry
+    repository: statsd-injector-release
+    access_token: {{access-token}}
+    drafts: true
+
 jobs:
 - name: loggregator-create-final-release
   serial: true
@@ -512,6 +546,91 @@ jobs:
       tag: bosh-hm-forwarder-version/version
       tag_prefix: v
   - put: bosh-hm-forwarder-release-github-release-drafts
+    params:
+      name: github-release/name
+      tag: github-release/tag
+      body: github-release/body
+      globs:
+      - github-release/*.tgz
+
+- name: statsd-injector-create-final-release
+  serial: true
+  plan:
+  - aggregate:
+    - get: statsd-injector-version
+      params:
+        bump: patch
+    - get: statsd-injector-release
+  - task: create-final-release
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/base
+      inputs:
+      - name: statsd-injector-version
+      - name: statsd-injector-release
+      outputs:
+      - name: final-statsd-injector-release
+      - name: github-release
+      params:
+        RELEASE: statsd-injector-release
+        S3_BUCKET: statsd-injector-release-blobs
+        S3_ACCESS_KEY: {{s3-access-key-id}}
+        S3_SECRET_KEY: {{s3-secret-access-key}}
+        OUTPUT: final-statsd-injector-release
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          #!/bin/bash
+
+          set -e -x
+
+          new_version=$(cat statsd-injector-version/version)
+          tag_name="v$new_version"
+
+          # write out github release files
+          echo "Statsd Injector $new_version" > github-release/name
+          echo $tag_name > github-release/tag
+          echo "TBD" > github-release/body
+
+          pushd $RELEASE
+            cat << EOF > config/private.yml
+          ---
+          blobstore:
+            provider: s3
+            options:
+              bucket_name: $S3_BUCKET
+              access_key_id: $S3_ACCESS_KEY
+              secret_access_key: $S3_SECRET_KEY
+          EOF
+
+            bosh -n create-release --final \
+              --tarball ../github-release/release.tgz \
+              --version "$new_version"
+            git config user.email "cf-loggregator@pivotal.io"
+            git config user.name "Loggregator CI"
+            git add .
+            git commit -m "Create final release\
+
+
+            [ci skip]"
+          popd
+
+          cp -r "${RELEASE}/." "${OUTPUT}/"
+  - put: statsd-injector-version
+    params:
+      file: statsd-injector-version/version
+  - put: statsd-injector-final-release
+    params:
+      repository: final-statsd-injector-release
+      rebase: false
+      tag: statsd-injector-version/version
+      tag_prefix: v
+  - put: statsd-injector-release-github-release-drafts
     params:
       name: github-release/name
       tag: github-release/tag
