Fix for loop for restage apps
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/tasks/restage-apps.yml
+++ b/tasks/restage-apps.yml
@@ -25,6 +25,6 @@ run:
         -s "$SPACE" \
         -o "$ORG"
 
-      for app in "$APP_NAMES"; do
+      for app in $APP_NAMES; do
         cf restage $app
       done
