Use loggregator/base docker image for restage apps job
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/tasks/restage-apps.yml
+++ b/tasks/restage-apps.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+    repository: loggregator/base
 params:
   CF_API:
   ORG:
