--- a/tasks/restage-apps.yml
+++ b/tasks/restage-apps.yml
@@ -38,7 +38,7 @@ run:
             go build
             cf push $app_name -b binary_buildpack -c ./logspinner -m 64M
           popd
+        else
+          cf restage $app_name
         fi
-
-        cf restage $app_name
       done
