Add delimiter to easier identify steps in restage job
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/tasks/restage-apps.yml
+++ b/tasks/restage-apps.yml
@@ -28,6 +28,11 @@ run:
         -o "$ORG"
 
       for app_name in $APP_NAMES; do
+        echo "##################################################"
+        echo "#"
+        echo "# Setting up $app_name"
+        echo "#"
+        echo "##################################################"
         set +e
         cf app $app_name
         ret=$?
