Add restage jobs to tracker and bluemix pipelines
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/health-nozzle.yml
+++ b/pipelines/health-nozzle.yml
@@ -33,5 +33,6 @@ jobs:
 
             cd src/github.com/cloudfoundry-incubator/health-nozzle
             go get github.com/Masterminds/glide
+            go get github.com/onsi/ginkgo/ginkgo
             glide install
             ginkgo -r -race
