--- a/pipelines/pws-eu.yml
+++ b/pipelines/pws-eu.yml
@@ -160,6 +160,7 @@ jobs:
       DRAIN_VERSION: "1.0"
       DRAIN_TYPE: "https"
       METRIC_PREFIX: ""
+      JOB_NAME: "https-teardown"
     timeout: 15m
   - task: v2-drain
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
@@ -175,6 +176,7 @@ jobs:
       DRAIN_VERSION: "2.0"
       DRAIN_TYPE: "https"
       METRIC_PREFIX: ""
+      JOB_NAME: "https-teardown"
     timeout: 15m
 
 - name: latency
