Uses release-candidate branch for our pipeline
Since the golang1.8.3 blobs are available.

[#146042233]

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -24,7 +24,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-release
-    branch: develop
+    branch: release-candidate
 
 - name: cf-release-develop
   type: git
