--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -168,7 +168,7 @@ jobs:
           function munge {
             echo $1 | tr '/' '_'
           }
-          for pkg in $(go list metron/...); do
+          for pkg in $(go list code.cloudfoundry.org/loggregator/metron/...); do
             go test -c -o ../test-binaries/$(munge $pkg)_test.exe $pkg
           done
           go build -o ../binaries/metron.exe metron
