--- a/pipelines/capacity-planning.yml
+++ b/pipelines/capacity-planning.yml
@@ -268,6 +268,7 @@ jobs:
           LOG_BYTES: 1000
           INSTANCES_PER_APP: 4
           NUMBER_OF_APPS: 2
+          DATADOG_API_KEY: {{datadog-dev-api-key}}
         run:
           path: bash
           args:
@@ -275,9 +276,20 @@ jobs:
           - |
             #!/bin/bash
             set -ex
-            password=$(bosh int vars-store/$VARS_STORE_FILE --path=/cf_admin_password)
+            CF_PASSWORD=$(bosh int vars-store/$VARS_STORE_FILE --path=/cf_admin_password)
+            CF_USERNAME="admin"
+            CLIENT_ID="capacity_planning_authenticator"
+            CLIENT_SECRET=$(bosh int vars-store/$VARS_STORE_FILE --path=/capacity_planning_authenticator_secret)
 
-            cf login -a api.$SYSTEM_DOMAIN -u admin -p $password -o $ORG -s $SPACE --skip-ssl-validation
+            cf login -a api.$SYSTEM_DOMAIN -u $CF_USERNAME -p $CF_PASSWORD -o $ORG -s $SPACE --skip-ssl-validation
+
+            flags="--logs-per-second=$LOGS_PER_SECOND"
+            flags="$flags --log-bytes=$LOG_BYTES"
+            flags="$flags --datadog-api-key=$DATADOG_API_KEY"
+            flags="$flags --cf-username=$CF_USERNAME"
+            flags="$flags --cf-password=$CF_PASSWORD"
+            flags="$flags --client-id=$CLIENT_ID"
+            flags="$flags --client-secret=$CLIENT_SECRET"
 
             pushd loggregator-ci/tools/log_emitter
               go build
@@ -285,7 +297,7 @@ jobs:
               for i in $(seq $NUMBER_OF_APPS); do
                 cf push "log_emitter-$i" \
                   -b binary_buildpack \
-                  -c "./log_emitter --logs-per-second=$LOGS_PER_SECOND --log-bytes=$LOG_BYTES" \
+                  -c "./log_emitter $flags" \
                   -i $INSTANCES_PER_APP \
                   -m 32M \
                   -u none
