--- a/pipelines/science.yml
+++ b/pipelines/science.yml
@@ -304,7 +304,7 @@ jobs:
                   git add . --all
                   git commit -m "Updated scalable syslog deployment vars
 
-                  [ci-skip]"
+                  [ci-skip]" || true
                 popd
 
                 rsync -ac updated-vars-store/ updated-deployments-loggregator
@@ -445,7 +445,7 @@ jobs:
                   git add . --all
                   git commit -m "Updated scalable syslog deployment vars
 
-                  [ci-skip]"
+                  [ci-skip]" || true
                 popd
 
                 rsync -ac updated-vars-store/ updated-deployments-loggregator
