Attempt to ensure tag exists to be checked out on CI
[#146490985]

Signed-off-by: JT Archie <jtarchie@gmail.com>

--- a/pipelines/science.yml
+++ b/pipelines/science.yml
@@ -426,7 +426,9 @@ jobs:
                 popd
 
                 pushd scalable-syslog-release-elect
-                  git checkout $(cat ../scalable-syslog-github-release/tag)
+                  local tag=$(cat ../scalable-syslog-github-release/tag)
+                  git fetch $tag
+                  git checkout $tag
                 popd
 
                 ss_dir="$PWD/scalable-syslog-release-elect"
